add gitignore for ffmpeg

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,11 @@ MANIFEST
 *.manifest
 *.spec
 
+
+# Ignore ffmpeg binaries
+ffmpeg/
+*.exe
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
